// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIterables should get iterables 1`] = `
Array [
  Array [],
  Array [
    Object {
      "a": 1,
    },
  ],
]
`;

exports[`getIterables should get iterables 2`] = `
Array [
  Array [],
  Array [
    "ui",
    "updatedAt",
  ],
]
`;

exports[`getIterables should get iterables 3`] = `
Array [
  "idle",
  "done",
]
`;
